<resources>
    <string name="app_name">My Application</string>
    <string name="button">Button</string>
    <string name="textview">TextView</string>
    <string name="name_of_label_of_mods">Режимы</string>
    <string name="name_of_label_of_create_mode"><u>Выберите и настройте всё что вам необходимо</u></string>
    <string name="title_activity_settings">settingsActivity</string>
    <string name="title_activity_change">change_activity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="channel_id">155</string>
    <string name="channel_description">Описание канала</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="wifi">Wifi</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="brightness">Яркость</string>
    <string name="not_disturb">Не беспокоить</string>
    <string name="title_of_mode">Название режима</string>
    <string name="create_mode">Создать новый режим</string>
</resources>