<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/boxInsetLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrey"
    tools:context=".settingsActivity"
    tools:deviceIds="wear">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="17dp"
            android:text="@string/name_of_label_of_create_mode"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="20sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="477dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp">

                <CheckBox
                    android:id="@+id/checkBox_wifi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wifi" />

                <Switch
                    android:id="@+id/switch_wifi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp">

                <CheckBox
                    android:id="@+id/checkBox_bluetooth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bluetooth" />

                <Switch
                    android:id="@+id/switch_bluetooth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp">

                <CheckBox
                    android:id="@+id/checkBox_brigtness"
                    android:layout_width="137dp"
                    android:layout_height="wrap_content"
                    android:text="@string/brightness" />

                <SeekBar
                    android:id="@+id/seekBar_brigtness"
                    android:layout_width="216dp"
                    android:layout_height="match_parent"
                    android:max="255"
                    android:visibility="invisible" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp">

                <CheckBox
                    android:id="@+id/checkBox_dist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_disturb" />

                <Switch
                    android:id="@+id/switch_dist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false" />
            </TableRow>
        </TableLayout>

    </LinearLayout>

    <EditText
        android:id="@+id/edit_title"
        android:layout_width="372dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/title_of_mode"
        android:inputType="textPersonName"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/button_ok"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        tools:visibility="visible" />

    <Button
        android:id="@+id/button_ok"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/create_mode"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

